# ResGenie

./: .gitignore  GitCommitCriterion.md  HAVEDO.md  LICENSE  README.md  pyproject.toml
docs/: TODO.MD  index.html
src/agents/: __init__.py  base.py
src/core/: __init__.py  config.py  database.py  logging.py
src/models/: __init__.py  agent_execution.py  document.py  report.py  task.py  user.py
tests/unit/: __init__.py  test_agent_base.py  test_database.py  test_logging.py
