[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ResGenie"
version = "0.1.0"
description = "多智能体协作的学术调研助手"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-core>=0.1.0",
    "langgraph>=0.2.0",
    "ollama>=0.1.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "uvicorn>=0.24.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.23",
    "httpx>=0.25.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
    "agents",
    "api",
    "core",
    "models",
    "services",
    "utils",
    "workers"
]

